fix for column gap on large window sizes

--- a/dev/css/i-grid.css
+++ b/dev/css/i-grid.css
@@ -19,7 +19,7 @@ table {
     margin: unset;
 }
 
-#grid {
+#grid-images {
     width: calc( ((var(--image-250) + var(--column-gap)) * var(--column-count) - var(--column-gap)) );
     margin: 0 auto;
 }
